modif à propos + ajout des compétences

--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,7 @@ p {
 	background-color: #5C6BC0;
 	display: flex;
 	flex-direction: column;
-	width: 32%;
+	width: 30%;
 }
 
 #left-column h2
@@ -66,6 +66,7 @@ p {
 #contact p
 {
 	margin-left:30px;
+	word-wrap: break-word;
 }
 
 #about
@@ -98,7 +99,7 @@ p {
 #right-column
 {
 	margin-left: 5%;
-	width: 68%;
+	width: 70%;
 }
 
 #right-column h2
@@ -221,8 +222,8 @@ a{
 }
 
 .progress{
+	width: 50%;
 	height:25px;
-	width: 500px;
     margin:30px 20px;
 	background:#ddd;
 	color: #FFF;
@@ -235,10 +236,61 @@ a{
 }
 .progress h5{
     margin-top:5px;
-	text-shadow:1px 1px 1px #000;
 	text-align: center;
 }
-.box .progress{
-	justify-content: space-between;
+
+@media all and (max-width: 780px) {
+	/* GENERALE */
+	.container
+	{
+		display: flex;
+		flex-direction: column;
+	}
+
+	#left-column:nth-child(1) {
+		order: 1;
+	}
+
+	#right-column
+	{
+		width: 90%;
+		margin: auto;
+	}
+
+	#left-column
+	{
+		width: 90%;
+		margin: auto;
+	}
+
+	.box
+	{
+		flex-direction: column;
+		display: block;
+		margin-bottom: 50px;
+	}
+
+	dd
+	{
+		margin-top:8px;
+	}
+
+	#recommandations .box div
+	{
+		margin-top: 50px;
+		margin-bottom: 50px;
+	}
+
+	#skills .box{
+		margin-bottom: 30px;
+	}
+	.progress{
+		width: 90%;
+	}
 }
 
+@media all and (max-width: 570px) {
+	#name{
+		background-image: none;
+	}
+}
