--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,6 @@
 	font-family: 'aliceregular';
 	src: url('../font/Alice-Regular-webfont.eot');
 	src: url('../font/Alice-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-		url('../font/Alice-Regular-webfont.woff2') format('woff2'),
 		url('../font/Alice-Regular-webfont.woff') format('woff'),
 		url('../font/Alice-Regular-webfont.ttf') format('truetype'),
 		url('../font/Alice-Regular-webfont.svg#aliceregular') format('svg');
@@ -19,6 +18,7 @@
 .container {
 	display: flex;
 	justify-content: space-around;
+	flex-direction: row-reverse;
 	max-width: 1100px;
 	margin: auto;
 }
@@ -234,9 +234,10 @@ a{
 	height: 25px;
 	overflow: hidden;
 }
-.progress h5{
+.progress .titre{
     margin-top:5px;
 	text-align: center;
+	font-size: 14px;
 }
 
 @media all and (max-width: 780px) {
